SDR resolve API
